# learning

./: .gitignore
.claude/: settings.local.json
.claude/plans/: cozy-gathering-crayon.md  fizzy-twirling-blossom.md  foamy-tickling-elephant.md  parsed-chasing-pebble.md  shimmying-pondering-plum-agent-ad6257f8682d3bad5.md  shimmying-pondering-plum-agent-aff83521788b52ab6.md  shimmying-pondering-plum.md  wobbly-cuddling-pizza.md  zesty-singing-umbrella.md
01_process_thread/: .gitignore  Makefile  README.md  docker-compose.yml
01_process_thread/go/: Dockerfile  go.mod  main.go
01_process_thread/java/: Dockerfile  Dockerfile.threadpool  build.gradle  settings.gradle
01_process_thread/k6/: README.md  heavy-load.js  k8s-autoscale-test.js  threshold-finder.js
02_cache/: .gitignore  Makefile  README.md  docker-compose.yml
03_security_measures/: .gitignore  Makefile  README.md  docker-compose.yml
04_agent/: Makefile  README.md  docker-compose.yml
04_agent/strands-python/: Dockerfile  agent.py  pyproject.toml
04_agent/strands-python/backend/: Dockerfile  agent.py  main.py  pyproject.toml
04_agent/strands-python/backend/skills/: summarize.py
04_agent/strands-python/backend/skills/summarize/: SKILL.md
04_agent/strands-python/backend/tests/: test_task_tools.py
04_agent/strands-python/backend/tools/: task_tools.py
04_agent/strands-python/frontend/: Dockerfile  package.json  pnpm-lock.yaml  vite.config.ts
04_agent/strands-python/frontend/src/: App.tsx
04_agent/strands-python/skills/: prioritize.py
05_database/: Makefile  README.md  docker-compose.yml
(+316 files in other folders)
